---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] stdin.sh arg --help"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Read from stdin or from a file using an argument

[4mUsage:[0m
  arg [OPTIONS] [PATH]
  arg -h|--help

[4mArguments:[0m
  PATH
    Path to file (reads from stdin if empty)
    [@default -]

[4mOptions:[0m
  -h --help
    Print help

